scroll blockquotes to prevent horizontal scroll on mobile

--- a/_sass/_mb.scss
+++ b/_sass/_mb.scss
@@ -66,6 +66,7 @@ blockquote {
   font-size: 20px;
   border-left: 0;
   position: relative;
+  overflow: auto;
   &:before {
     content: "λ";
     position: absolute;
